[package]
name = "marsh"
version = "0.0.0"
license = "Apache-2.0"
authors = ["mingshuisheng <mingshuisheng@gmail.com>"]
description = "a simple widget library for druid"
repository = "https://github.com/mingshuisheng/druid_ext"
readme = "README.md"
keywords = ["druid", "widget", "ui"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
